--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@
 # --- Third-party (pip install) ---
 
 matplotlib==3.10.8
-numpy==2.4.1
+numpy<2.2.0
 pandas==3.0.0
 requests==2.32.5
 tensorflow==2.19.0
